# ResumeCreationApp

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  db.sqlite3  deploy-backend.sh  deploy-frontend.sh  deploy.sh  docker-compose.yml  fix_themes.py  gradle.properties  settings.gradle.kts
.claude/: CLAUDE.md  settings.local.json
.claude/best-practices/: architecture.md  backend-api-patterns.md  backend-architecture.md  backend-security.md  backend-testing.md  compose-ui.md  lessons.md  network-data.md  testing.md  viewmodel-state.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build.yml  lint.yml  playstore_pipeline.yml  release.yml  test.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/dependencies/: prodReleaseRuntimeClasspath.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  auth.py  database.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  prompts.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_stored_resumes.py  0003_resume_job_status.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: ats.py  auth.py  resume.py  stored_resumes.py  uploads.py  users.py
backend/app/core/: config.py  limiter.py  prompts.py  security.py
backend/app/crud/: stored_resume.py  token.py  user.py
backend/app/db/: init_db.py  session.py
backend/app/models/: resume.py  stored_resume.py  token.py  user.py
backend/app/schemas/: ats.py  auth.py  common.py  stored_resume.py
backend/app/services/: ats.py  resume.py
backend/app/tasks/: cleanup.py  email.py  resume.py
backend/app/workers/: arq_worker.py
backend/nginx/: nginx.conf
backend/tests/: conftest.py  test_ats.py  test_auth.py  test_resume.py  test_resume_service.py  test_stored_resumes.py  test_tasks.py  test_uploads.py  test_users.py
baselineprofile/: build.gradle.kts
benchmark/: build.gradle.kts
build-logic/convention/: build.gradle.kts
chrome-extension/: package-lock.json  package.json  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: types.ts
config/detekt/: detekt.yml
core/analytics/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/datastore/: build.gradle.kts
core/domain/: build.gradle.kts
core/feature-flags/: build.gradle.kts
core/network/: build.gradle.kts
core/notifications/: build.gradle.kts
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
gradle/: libs.versions.toml
playstore-production-automation/: AGENTS.md  DEVELOPMENT.md  GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  SETUP_GUIDE.md  requirements.txt
scripts/: commit-msg  pre-commit
(+311 files in other folders)
